# Search_Engine

./: config.json  requests.json
SearchEngine/: CMakeLists.txt  config.json  converterjson.cpp  converterjson.h  main.cpp
